# engine

./: .gitignore  CMakeLists.txt  README.md  engine.rc  main.cpp
include/imgui/: imgui.cpp  imgui.hpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp  imgui_internal.hpp  imgui_tables.cpp  imgui_widgets.cpp
include/stb_image/: stb_image.h
lib/windows/x64/: glew32d.lib  sfml-audio-d.lib  sfml-network-d.lib  sfml-system-d.lib
resources/Shaders/: FragShader  VertShader
resources/textures/: download.jfif
src/Buffers/: buffer.h  indexbuffer.h  vertexarray.h
src/Graphics/: Textures.h  shader.h  window.cpp  window.h
src/Renderers/: quads.h  renderer.h  simple2Drenderer.h
src/Utils/: camera.cpp  camera.h  collition.h  fileutils.cpp  fileutils.h
test_game/: player.h
